--- a/parts/cvs/cvsoptionswidgetbase.ui
+++ b/parts/cvs/cvsoptionswidgetbase.ui
@@ -8,230 +8,145 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>437</width>
-            <height>374</height>
+            <width>448</width>
+            <height>384</height>
         </rect>
     </property>
     <property name="caption">
         <string>CVS Options</string>
     </property>
-    <widget class="QLabel">
+    <vbox>
         <property name="name">
-            <cstring>cvs_label</cstring>
+            <cstring>unnamed</cstring>
         </property>
-        <property name="geometry">
-            <rect>
-                <x>11</x>
-                <y>11</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
+        <property name="margin">
+            <number>11</number>
         </property>
-        <property name="text">
-            <string>CVS options:</string>
+        <property name="spacing">
+            <number>6</number>
         </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>cvs_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>11</x>
-                <y>31</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>commit_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>60</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Commit options:</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>commit_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>80</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>update_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>130</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>update_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>110</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Update options:</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>add_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>180</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>add_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>160</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Add options:</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>remove_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>230</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>remove_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>210</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Remove options:</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>diff_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>280</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-        <property name="sizePolicy">
-            <sizepolicy>
-                <hsizetype>7</hsizetype>
-                <vsizetype>0</vsizetype>
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-            </sizepolicy>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>diff_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>260</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Diff options:</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>log_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>330</y>
-                <width>416</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>log_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>310</y>
-                <width>416</width>
-                <height>16</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Log options:</string>
-        </property>
-    </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>cvs_label</cstring>
+            </property>
+            <property name="text">
+                <string>CVS options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>cvs_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>commit_label</cstring>
+            </property>
+            <property name="text">
+                <string>Commit options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>commit_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>update_label</cstring>
+            </property>
+            <property name="text">
+                <string>Update options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>update_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>add_label</cstring>
+            </property>
+            <property name="text">
+                <string>Add options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>add_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>remove_label</cstring>
+            </property>
+            <property name="text">
+                <string>Remove options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>remove_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>diff_label</cstring>
+            </property>
+            <property name="text">
+                <string>Diff options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>diff_edit</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>7</hsizetype>
+                    <vsizetype>0</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>log_label</cstring>
+            </property>
+            <property name="text">
+                <string>Log options:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>log_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>rsh_label</cstring>
+            </property>
+            <property name="text">
+                <string>Remote shell (CVS_RSH):</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>rsh_edit</cstring>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>sets the CVS_RSH variable</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>Set this option to "ssh" to use ssh as remote shell for CVS. Note that you need password-less login (see the ssh howtos how to generate a public/private key pair) otherwise CVS will just hang forever.</string>
+            </property>
+        </widget>
+    </vbox>
 </widget>
 <tabstops>
     <tabstop>cvs_edit</tabstop>
 </tabstops>
-<includes>
-    <include location="local" impldecl="in implementation">cvsoptionswidgetbase.ui.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
