--- a/parts/cppsupport/cppnewclassdlgbase.ui
+++ b/parts/cppsupport/cppnewclassdlgbase.ui
@@ -764,9 +764,6 @@ a class for the KDE libraries.</string>
                         <property name="title">
                             <string></string>
                         </property>
-                        <property name="flat">
-                            <bool>true</bool>
-                        </property>
                         <hbox>
                             <property name="name">
                                 <cstring>unnamed</cstring>
@@ -806,7 +803,7 @@ a class for the KDE libraries.</string>
                             </widget>
                         </hbox>
                     </widget>
-                    <widget class="QWidgetStack" row="1" column="0" rowspan="1" colspan="2">
+                    <widget class="QFrame" row="1" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>widgetStack1</cstring>
                         </property>
