--- a/parts/autoproject/configureoptionswidgetbase.ui
+++ b/parts/autoproject/configureoptionswidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>ConfigureOptionsWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>510</width>
-            <height>338</height>
+            <height>403</height>
         </rect>
     </property>
     <property name="caption">
@@ -114,6 +114,12 @@
                     <property name="sizeType">
                         <enum>Expanding</enum>
                     </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>20</width>
+                            <height>20</height>
+                        </size>
+                    </property>
                 </spacer>
             </hbox>
         </widget>
@@ -132,24 +138,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
-                    <spacer row="5" column="1">
-                        <property name="name">
-                            <cstring>Spacer25</cstring>
-                        </property>
-                        <property name="orientation">
-                            <enum>Vertical</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>Expanding</enum>
-                        </property>
-                    </spacer>
-                    <spacer row="2" column="2">
+                    <spacer row="2" column="3">
                         <property name="name">
                             <cstring>Spacer26</cstring>
                         </property>
@@ -166,12 +155,12 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QLineEdit" row="1" column="1" rowspan="1" colspan="3">
+                    <widget class="QLineEdit" row="1" column="1" rowspan="1" colspan="4">
                         <property name="name">
                             <cstring>configargs_edit</cstring>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="0" column="0" rowspan="1" colspan="4">
+                    <widget class="QLabel" row="0" column="0" rowspan="1" colspan="5">
                         <property name="name">
                             <cstring>configargs_label</cstring>
                         </property>
@@ -179,7 +168,7 @@
                             <string>Configure arguments:</string>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="3" column="0" rowspan="1" colspan="4">
+                    <widget class="QLabel" row="3" column="0" rowspan="1" colspan="5">
                         <property name="name">
                             <cstring>builddir_label</cstring>
                         </property>
@@ -196,6 +185,56 @@
                         </property>
                         <property name="sizeType">
                             <enum>Fixed</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget class="QLabel" row="5" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>topsourcedir_label</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Top source directory:</string>
+                        </property>
+                    </widget>
+                    <widget class="QLineEdit" row="4" column="1" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>builddir_edit</cstring>
+                        </property>
+                    </widget>
+                    <widget class="QPushButton" row="4" column="4">
+                        <property name="name">
+                            <cstring>builddir_button</cstring>
+                        </property>
+                        <property name="minimumSize">
+                            <size>
+                                <width>30</width>
+                                <height>0</height>
+                            </size>
+                        </property>
+                        <property name="maximumSize">
+                            <size>
+                                <width>30</width>
+                                <height>32767</height>
+                            </size>
+                        </property>
+                        <property name="text">
+                            <string>...</string>
+                        </property>
+                    </widget>
+                    <spacer row="7" column="2">
+                        <property name="name">
+                            <cstring>spacer16</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
                         </property>
                         <property name="sizeHint">
                             <size>
@@ -221,14 +260,26 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QLineEdit" row="4" column="1" rowspan="1" colspan="2">
+                    <spacer row="6" column="0">
                         <property name="name">
-                            <cstring>builddir_edit</cstring>
+                            <cstring>spacer17</cstring>
                         </property>
-                    </widget>
-                    <widget class="QPushButton" row="4" column="3">
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Fixed</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget class="QPushButton" row="6" column="4">
                         <property name="name">
-                            <cstring>builddir_button</cstring>
+                            <cstring>topsourcedir_button</cstring>
                         </property>
                         <property name="minimumSize">
                             <size>
@@ -244,6 +295,11 @@
                         </property>
                         <property name="text">
                             <string>...</string>
+                        </property>
+                    </widget>
+                    <widget class="QLineEdit" row="6" column="1" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>topsourcedir_edit</cstring>
                         </property>
                     </widget>
                 </grid>
@@ -370,6 +426,12 @@
                         <property name="sizeType">
                             <enum>Expanding</enum>
                         </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
                     </spacer>
                 </grid>
             </widget>
@@ -494,6 +556,12 @@
                         </property>
                         <property name="sizeType">
                             <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
                         </property>
                     </spacer>
                 </grid>
@@ -620,6 +688,12 @@
                         <property name="sizeType">
                             <enum>Expanding</enum>
                         </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
                     </spacer>
                 </grid>
             </widget>
@@ -741,6 +815,18 @@
         <receiver>configure_options_widget</receiver>
         <slot>setDirty()</slot>
     </connection>
+    <connection>
+        <sender>topsourcedir_button</sender>
+        <signal>clicked()</signal>
+        <receiver>configure_options_widget</receiver>
+        <slot>topsourcedirClicked()</slot>
+    </connection>
+    <connection>
+        <sender>topsourcedir_edit</sender>
+        <signal>textChanged(const QString&amp;)</signal>
+        <receiver>configure_options_widget</receiver>
+        <slot>setDirty()</slot>
+    </connection>
 </connections>
 <tabstops>
     <tabstop>cservice_combo</tabstop>
@@ -769,6 +855,7 @@
     <slot access="protected">f77flagsClicked()</slot>
     <slot access="protected">f77serviceChanged()</slot>
     <slot access="protected">setDirty()</slot>
+    <slot access="protected">topsourcedirClicked()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
