applied patch sent by Amilcar Lucas (amilcar@ida.ing.tu-bs.de) -When you press Move down on the Target options dialog nothing happens

--- a/parts/autoproject/targetoptionsdlgbase.ui
+++ b/parts/autoproject/targetoptionsdlgbase.ui
@@ -534,7 +534,7 @@
         <sender>outsidemovedown_button</sender>
         <signal>clicked()</signal>
         <receiver>target_options_dialog</receiver>
-        <slot>insideMoveDownClicked()</slot>
+        <slot>outsideMoveDownClicked()</slot>
     </connection>
     <connection>
         <sender>outsideadd_button</sender>
